--- a/views/404.html
+++ b/views/404.html
@@ -11,7 +11,7 @@
     <header class="main-header">
         <nav class="main-header__nav">
             <ul class="main-header__item_list">
-                <li class="main-header__item"><a href="/" class="active">Strona Glowna</a></li>
+                <li class="main-header__item"><a href="/">Strona Glowna</a></li>
                 <li class="main-header__item"><a href="/">Ogólne dane</a></li>
                 <li class="main-header__item"><a href="/">Warunki w szklarni</a></li>
                 <li class="main-header__item"><a href="/">Stream</a></li>
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <main>
-        <h1>Strona nieznaleziona</h1>
+        <h1>Strona nieodnaleziona</h1>
     </main>
 </body>
 </html>
