--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,7 @@
+html {
+  background-color: black;
+  color: white;
+}
 body {
     padding: 0;
     margin: 0;
@@ -7,13 +11,12 @@ body {
   main {
     padding: 1rem;
   }
-
   .main-header {
     width: 100%;
     height: 3.5rem;
-    background-color: #31ebeb;
-    padding: 0 1.5rem;
+    background-color: #dd1b1b;
   }
+
   .main-header__nav {
     height: 100%;
     display: flex;
@@ -25,12 +28,19 @@ body {
     margin: 0;
     padding: 0;
     display: flex;
+    font-family: 'Arsenal', sans-serif;
   }
+
+  .main-header__item_list img {
+    height: 40px;
+  }
+
   .main-header__item {
     margin: 0;
     padding: 0;
     margin: 0 1rem;
     font-size: 1.2em;
+    font-weight: bold;
   }
 
   .main-header__item a {
@@ -41,5 +51,5 @@ body {
   .main-header__item a:hover,
   .main-header__item a:active,
   .main-header__item a.active {
-    color: rgb(92, 23, 170);
+    color: white;
   }
