--- a/views/szklarnia.html
+++ b/views/szklarnia.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Szklarnia</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arsenal&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="css/szklarnia.css">
+    
   </head>
   <body>
     <header class="main-header">
@@ -14,26 +19,28 @@
           <li class="main-header__item">
             <a href="/" class="active">Strona Glowna</a>
           </li>
-          <li class="main-header__item"><a href="/">Ogólne dane</a></li>
-          <li class="main-header__item"><a href="/">Warunki w szklarni</a></li>
-          <li class="main-header__item"><a href="/">Stream</a></li>
-          <li class="main-header__item"><a href="/">Sterowanie Światłem</a></li>
+          <li class="main-header__item"><a href="/dane">Ogólne dane</a></li>
+          <li class="main-header__item"><a href="/wykresy">Dane z wykresami</a></li>
+          <li class="main-header__item"><a href="/stream">Stream</a></li>
+          <li class="main-header__item"><a href="/swiatlo">Sterowanie światłem</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <img
-        src="https://media2.giphy.com/media/oW4csEbiMzVjq/200.gif"
-        alt="this slowpoke moves"
-        width="250"
-        height="auto"
-      />
-      <img
-        src="https://media0.giphy.com/media/6uGhT1O4sxpi8/giphy.gif"
-        alt="this slowpoke moves"
-        width="500"
-        height="auto"
-      />
+      <!-- <img src="miniszklarnia.jpeg" alt="miniszklarnia" class="miniszklarnia"> -->
+      <!-- <audio controls loop>
+        <source src="Persona.mp4" type="audio/mp4">
+      </audio> -->
+      <div class="intro">
+        <div class="tekst">Mini szklarnia w Twoim domu, sprawdź co potrafi</div>
+        <div class="funkcje__list">Obecne funckje:</div>
+        <ul class="funkcje">
+        <li class="item">Podejrzyj obecne warunki panujące w szklarni</li>
+        <li class="item">Przejrzyj wykresy i statystyki danych z poprzednich dni</li>
+          <li class="item">Zobacz wnętrze szklarni na żywo</li>
+          <li class="item">Steruj światłem w szklarni</li>
+        </ul>
+      </div>
     </main>
   </body>
 </html>
