--- a/views/swiatlo.ejs
+++ b/views/swiatlo.ejs
@@ -11,7 +11,7 @@
     <%- include('includes/navigation.ejs') %>
     <main>
       <label for="colorpicker">Wybierz kolor oświetlenia w szklarni:</label>
-      <input type="color" id="colorpicker" value="#0000ff" />
+      <input type="color" id="colorpicker" value="#1698E9" />
       <div>
         <button type="submit" class="btn">Zastosuj</button>
       </div>
