--- a/public/css/dane.css
+++ b/public/css/dane.css
@@ -5,7 +5,7 @@
 .dane {
     border: 2px white solid;
     color: white;
-    height: 120px;
+    height: 15vh;
     width: 20%;
     flex: auto;
     margin: 10px;
@@ -28,15 +28,17 @@
 .dane_wartosc {
     text-align: center;
     font-size: 2em;
-    padding-bottom: 10px;
+    padding: 10px;
 }
 
 .dane_czas {
     text-align: center;
+    padding: 2px;
     color: rgba(255, 255, 255, 0.6);
 }
 
 .wartosc {
     text-align: center;
-    font-size: 3.5em;
+    font-size: 2em;
+    padding: 7px;;
 }
