--- a/views/wykresy.ejs
+++ b/views/wykresy.ejs
@@ -3,6 +3,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Arsenal&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/wykresy.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
   <%- include('includes/navigation.ejs') %>
@@ -11,47 +12,101 @@
       <div class="temp">
         <div class="min_temp">
           <div class="tytul">Minimalna temperatura</div>
-          <div class="wartosc">19,3°C</div>
+          <div class="wartosc"><%=Math.min(...chartData.res.data.datasets[0].data) %>°C</div>
         </div>
         <div class="srednia_temp">
           <div class="tytul">Srednia temperatura</div>
-          <div class="wartosc">20°C</div>
+          <% const sum = chartData.res.data.datasets[0].data.reduce((a, b) => parseFloat(a) + parseFloat(b), 0); %>
+          <div class="wartosc"><%=sum/chartData.res.data.datasets[0].data.length %>°C</div>
         </div>
         <div class="max_temp">
           <div class="tytul">Maksymalna temperatura</div>
-          <div class="wartosc">21,3°C</div>
+          <div class="wartosc"><%=Math.max(...chartData.res.data.datasets[0].data) %>°C</div>
         </div>
       </div>
       <div class="wilg">
         <div class="min_wilg">
           <div class="tytul">Minimalna wilgotność</div>
-          <div class="wartosc">40%</div>
+          <div class="wartosc"><%=Math.min(...chartData.res2.data.datasets[0].data)%>%</div>
         </div>
         <div class="srednia_wilg">
+          <% const sum2 = chartData.res2.data.datasets[0].data.reduce((a, b) => parseFloat(a) + parseFloat(b), 0); %>
           <div class="tytul">Srednia wilgotność</div>
-          <div class="wartosc">50%</div>
+          <div class="wartosc"><%=sum2/chartData.res.data.datasets[0].data.length %>%</div>
         </div>
         <div class="max_wilg">
           <div class="tytul">Maksymalna wilgotność</div>
-          <div class="wartosc">60%</div>
+          <div class="wartosc"><%=Math.max(...chartData.res2.data.datasets[0].data) %>%</div>
         </div>
       </div>
     </div>
       <div class="wykresy">
-        <div class="wykres">
-          <div class="tytul">Wykres temperatury godzinowy</div>
-          <img src="wykres.png" alt="Wykres">
+        <div class="test">
+          <canvas id="myChart1"></canvas>
         </div>
         <div class="wykres">
-          <div class="tytul">Wykres wilgotności miesięczny</div>
-          <img src="wykres2.png" alt="Wykres">
-        </div>
+          <div class="test">
+            <canvas id="myChart2"></canvas>
+          </div>
     </div>
-    <ul>
-      <% data.temperature.forEach(element => { %>
-        <li><%=element%></li>
-        
-      <% }); %> 
-    </ul>
+    <script>
+      const chartOptions1= {
+        hitRadius: 20,
+        radius: 5,
+        responsive: true,
+        scales: {
+          yAxes: {
+            ticks: {
+              beginAtZero: true,
+              callback: function (value) {
+                return `${value} °C`;
+              }
+            }
+          }
+        }
+      };
+
+      const chartOptions2= {
+        hitRadius: 20,
+        radius: 5,
+        responsive: true,
+        scales: {
+          yAxes: {
+            ticks: {
+              beginAtZero: true,
+              callback: function (value) {
+                return `${value} %`;
+              }
+            }
+          }
+        }
+      };
+      
+
+      const options1 = <%- JSON.stringify(chartData.res) %>;
+      const options2 = <%- JSON.stringify(chartData.res2) %>;
+      console.log(options1, options2)
+      const ctx1 = document.getElementById('myChart1').getContext('2d');
+      const ctx2 = document.getElementById('myChart2').getContext('2d');
+      let gradient = ctx1.createLinearGradient(0,0,0,400);
+      gradient.addColorStop(0,'rgba(58,123,213,1');
+      gradient.addColorStop(0,'rgba(0,210,255, 0.3');
+
+      let gradient2 = ctx2.createLinearGradient(0,0,0,400);
+      gradient2.addColorStop(0,'rgba(58,123,213,1');
+      gradient2.addColorStop(0,'rgba(0,210,255, 0.3');
+
+      options1.data.datasets[0].backgroundColor = gradient;
+      options2.data.datasets[0].backgroundColor = gradient2;
+      options1.options = chartOptions1;
+      options2.options = chartOptions2;
+      const tempChart = new Chart(ctx1, options1);
+      const tempChart2 = new Chart(ctx2, options2);
+    </script>
+     
     </main>
     <%- include('includes/end.ejs') %>
+
+
+
+    
