--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,4 +1,7 @@
 <%- include('includes/head.ejs') %>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arsenal&display=swap" rel="stylesheet">
 </head>
 <body>
     <%- include('includes/navigation.ejs') %>
