--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -2,10 +2,19 @@
     <nav class="main-header__nav">
         <ul class="main-header__item_list">
             <li class="main-header__item"><a class="<%= path==='szklarnia' ? 'active' : '' %>" href="/">Strona Glowna</a></li>
+            <% if(isLoggedIn) {%>
             <li class="main-header__item"><a class="<%= path==='dane' ? 'active' : '' %>" href="/dane">Ogólne dane</a></li>
             <li class="main-header__item"><a class="<%= path==='wykresy' ? 'active' : '' %>" href="/wykresy">Dane z wykresami</a></li>
             <li class="main-header__item"><a class="<%= path==='stream' ? 'active' : '' %>" href="/stream">Stream</a></li>
             <li class="main-header__item"><a class="<%= path==='swiatlo' ? 'active' : '' %>" href="/swiatlo">Sterowanie światłem</a></li>
+            <% } %>
+        </ul>
+        <ul class="main-header__item_list">
+            <% if(!isLoggedIn) {%>
+            <li class="main-header__item login"><a class="<%= path==='login' ? 'active' : '' %>" href="/login">Zaloguj</a></li>
+            <% } else { %>
+            <li class="main-header__item login"><form action="/logout" method="POST"><button type="submit" class="logout">Wyloguj</button></form></li>
+            <% }%>
         </ul>
     </nav>
 </header>
