--- a/views/stream.ejs
+++ b/views/stream.ejs
@@ -9,7 +9,7 @@
       <main>
         <div class="stream">
             <div class="tytul">Relacja na żywo ze "szklarni"</div>
-            <img src="kwiatek.jpg" alt="Stream" class="relacja">
+            <img class="relacja" src="http://192.168.0.67:8080/?action=stream" />
         </div>
       </main>
       <%- include('includes/end.ejs') %>
