--- a/public/css/main.css
+++ b/public/css/main.css
@@ -63,6 +63,7 @@ body {
     font-size: 1em;
     font-weight: bold;
     border: none;
+    cursor: pointer;
   }
 
   .logout:hover, .logout:active {
