--- a/views/swiatlo.ejs
+++ b/views/swiatlo.ejs
@@ -14,7 +14,7 @@
       <label for="colorpicker">Wybierz kolor oświetlenia w szklarni:</label>
       <input type="color" id="colorpicker" value="#1698E9" name="colorpicker"/>
       <div>
-        <button type="submit" class="btn">Zastosuj</button>
+        <button type="submit" class="bn30">Zastosuj</button>
       </div>
     </form>
     </main>
