--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,21 +1,12 @@
-.btn {
-    border-radius: 4px;
-    font-size: 1.5em;
-    color: white;
-    background-color: red;
-    border: none;
-    margin-top: 10px;
-    
-}
-
-.btn:hover {
-    color: black;
-    background-color: red;
-    cursor: pointer;
+.error {
+    margin: 10px;
+    color: red;
+    font-weight: bold;
+    font-size: 1.1em;
 }
 
 .bn30 {
-    margin-top: 15px;
+    margin: 10px;
     border: 5em;
     cursor: pointer;
     outline: none;
@@ -29,16 +20,16 @@
     -webkit-transition: box-shadow 0.25s;
     transition: box-shadow 0.25s;
     color: white;
-  }
+}
   
-  .bn30 .text {
+.bn30 .text {
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-image: linear-gradient(45deg, #4568dc, #b06ab3);
-  }
+}
   
-  .bn30:after {
+.bn30:after {
     content: "";
     border-radius: 18px;
     position: absolute;
@@ -49,9 +40,9 @@
     right: 0;
     z-index: -1;
     background: #0e0e10;
-  }
+}
   
-  .bn30:hover {
+.bn30:hover {
     background-image: linear-gradient(-45deg, #4568dc, #b06ab3);
     box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
-  }
+}
