--- a/public/css/wykresy.css
+++ b/public/css/wykresy.css
@@ -90,3 +90,15 @@
   .bn30:hover .text {
     background-image: linear-gradient(-45deg, #4568dc, #b06ab3);
   }
+
+  .alert {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 50px;
+    width: 400px;
+    background-image: linear-gradient(45deg, #4568dc, #b06ab3);
+    border-radius: 8px;
+    margin: 40px 150px;
+  }
