--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -6,7 +6,7 @@
             <li class="main-header__item"><a class="<%= path==='dane' ? 'active' : '' %>" href="/dane">Ogólne dane</a></li>
             <li class="main-header__item"><a class="<%= path==='wykresy' ? 'active' : '' %>" href="/wykresy">Dane z wykresami</a></li>
             <li class="main-header__item"><a class="<%= path==='stream' ? 'active' : '' %>" href="/stream">Stream</a></li>
-            <li class="main-header__item"><a class="<%= path==='swiatlo' ? 'active' : '' %>" href="/swiatlo">Sterowanie światłem</a></li>
+            <li class="main-header__item"><a class="<%= path==='swiatlo' ? 'active' : '' %>" href="/swiatlo">Sterowanie oświetleniem</a></li>
             <% } %>
         </ul>
         <ul class="main-header__item_list">
