--- a/public/css/login.css
+++ b/public/css/login.css
@@ -5,6 +5,29 @@
     font-size: 1.1em;
 }
 
+.inputField {
+    margin: 10px;
+    margin-bottom: 20px;
+}
+
+.inputField label{
+    font-weight: bold;
+}
+
+.inputField input{
+    display: block;
+    transform: translate(0);
+    background-image: linear-gradient(45deg, #4568dc, #b06ab3);
+    padding: 0.7em 2em;
+    border-radius: 65px;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
+    -webkit-transition: box-shadow 0.25s;
+    transition: box-shadow 0.25s;
+    color: white;
+    border: none;
+    outline: none
+}
+
 .bn30 {
     margin: 10px;
     border: 5em;
